--- a/src/3-analysis.ipynb
+++ b/src/3-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
     "from sklearn.preprocessing import LabelEncoder\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "main_df = pd.read_csv('../data/raw/PROCESSED_DF.csv')\n",
+    "main_df = pd.read_csv('../data/processed/PROCESSED_DF.csv')\n",
     "main_df.head(3)"
    ]
   },
